[package]
name = "ash-bootstrap"
version = "0.3.1"
authors = ["Friz64 <friz64mc@protonmail.com>", "Brandon Pollack <brandonpollack23@gmail.com>", "Simon Borghese"]
license = "MIT"
description = "vk-bootstrap for Rust"
repository = "https://gitlab.com/SimonBorghese/vk-firewood-rs"
readme = "README.md"
keywords = ["gamedev", "graphics", "vulkan"]
categories = ["game-development", "graphics"]
edition = "2021"

[dependencies]
ash = "0.37.1+1.3.235"
ash-window = "0.12.0"
cstr = "0.2.11"
raw-window-handle = { version = "0.5", optional = true }
smallvec = "1.10.0"
thiserror = "1"

[features]
default = ["surface"]
surface = ["raw-window-handle"]

[dev-dependencies]
winit = "0.27"
